--- a/create-react-app/src/index.css
+++ b/create-react-app/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,100&display=swap');
 *, *::after, *::before{
     margin: 0;
     border: 0;
