--- a/create-react-app/src/views/pages/homepage/MainHeader.css
+++ b/create-react-app/src/views/pages/homepage/MainHeader.css
@@ -37,6 +37,7 @@ font-weight:400 ;
     margin: 1rem 0 3.5rem;
     font-size: 1.1rem;
     color: #848484;
+    line-height: 1.2;
 
 }
 .main__header-right{
